Set correct z-index for upload-progress

--- a/app/assets/stylesheets/desktop/_select2.scss
+++ b/app/assets/stylesheets/desktop/_select2.scss
@@ -1,3 +1,3 @@
-.modal .select2-container--bootstrap {
+.select2-container--open {
   z-index: 1100;
 }
