--- a/app/assets/stylesheets/tracks/_new_track_form.scss
+++ b/app/assets/stylesheets/tracks/_new_track_form.scss
@@ -3,7 +3,7 @@
   height: 100%;
   width: 100%;
   text-align: center;
-  z-index: 1000;
+  z-index: 1200;
   background-color: white;
   left: 0;
   top: 0;
